<resources>
    <string name="app_name">Smart Library App</string>

    <!--  AUTH  -->
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_login_title">Welcome to Smart Library App</string>
    <string name="welcome_login_title2">Lets login with your library account !</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="forgot_password_title">Forgot the password ?</string>
    <string name="email_smartlibrary_title">SmartLibrary_Officiall@gmail.com</string>
    <string name="copyright_title">CopyRight by Smart Library System 2021</string>
    <string name="welcome_register_title">Lets register your account in here !</string>
    <string name="email_title">Email</string>
    <string name="address_title">Address</string>
    <string name="birthday_title">BirthDay</string>
    <string name="male_title">Male</string>
    <string name="female_title">Female</string>
    <string name="smartlibrary_application_title">Smart Library Application</string>
    <string name="finalproject_title">Final Project Bangkit 2021</string>

    <!--  Home  -->
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="all_books_header_title">All Books</string>
    <string name="recomended_header_title">Recommended Books</string>
    <string name="welcome_home_title">Welcome,</string>
    <string name="borrow_a_book">Borrow a book</string>
    <string name="return_a_book">Return a book</string>
    <string name="title_activity_books">BooksActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_bar_favorite_books">Favorite Books</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="all_books_title">All books</string>


    <!--  Profile  -->
    <string name="my_profile">My Profile</string>
    <string name="smart_library">Smart Library System</string>
    <string name="fullname_title">Full Name</string>
    <string name="smartlbr_username">smartlbr</string>
    <string name="address_profile">Jl.Angkasa</string>
    <string name="email_profile">SmartLibrary_Officiall@gmail.com</string>
    <string name="birthday_profile">01 - Mei - 2021</string>
    <string name="email_profile">yossysyahida@gmail.com</string>
    <string name="full_name">Full Name</string>
    <string name="my_profile">My Profile</string>
    <string name="smart_library">Smart Library System</string>
    <string name="fullname_title">Full Name</string>
    <string name="smartlbr_username">smartlbr</string>
    <string name="address_profile">Jl.Angkasa</string>
    <string name="email_profile">SmartLibrary_Officiall@gmail.com</string>
    <string name="birthday_profile">01 - Mei - 2021</string>
    <string name="sex_profile">Female</string>
    <string name="sex_title">Sex</string>
    <string name="password_profile">s********</string>
    <string name="history_borrowed_toolbar">History Borrowed</string>
    <string name="loading">Load data from local</string>
    <string name="loading2">This will take a while for the first time</string>
    <string name="popular_books_title">Popular Books</string>
    <string name="date_of_borrowed_title">Date of Borrowed</string>
    <string name="borrow_the_book_title">Borrow the book</string>
    <string name="deadline_of_borrowed_title">Deadline of Borrowed</string>
    <string name="return_now_title">Return now</string>


    <!--  Settings  -->
    <string name="change_language">Change Languages</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="md_member_1">- M Ramdhan Syahputra</string>
    <string name="cc_member_1">- Arif Wicaksono</string>
    <string name="ml_member_1">- Afgani Fajar Rizky</string>
    <string name="android_developer_title">Android Developer</string>
    <string name="cloud_computing_title">Cloud Computing</string>
    <string name="machine_learning_title">Machine Learning</string>
    <string name="language">Language</string>
    <string name="about_application_title">About Application</string>
    <string name="smart_library_version_1_0">Smart Library version 1.0</string>
    <string name="copy_right_smart_library_system">Copy right smart library system</string>
    <string name="md_member_2">- Yossy Syahida</string>
    <string name="cc_member_2">- Orel Revo Sakchi Usdelivian</string>
    <string name="ml_member_2">- Ergina Kamilia Putri</string>


    <!--  Profile  -->
    <string name="my_profile">My Profile</string>
    <string name="smart_library">Smart Library System</string>
    <string name="fullname_title">Full Name</string>
    <string name="smartlbr_username">smartlbr</string>
    <string name="address_profile">Jl.Angkasa</string>
    <string name="email_profile">SmartLibrary_Officiall@gmail.com</string>
    <string name="birthday_profile">01 - Mei - 2021</string>
    <string name="sex_profile">Female</string>
    <string name="sex_title">Sex</string>
    <string name="password_profile">s********</string>
    <string name="history_borrowed_toolbar">History Borrowed</string>


    <!--  Settings  -->
    <string name="change_language">Change Languages</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="md_member_1">- M Ramdhan Syahputra</string>
    <string name="cc_member_1">- Arif Wicaksono</string>
    <string name="ml_member_1">- Afgani Fajar Rizky</string>
    <string name="android_developer_title">Android Developer</string>
    <string name="cloud_computing_title">Cloud Computing</string>
    <string name="machine_learning_title">Machine Learning</string>
    <string name="language">Language</string>
    <string name="about_application_title">About Application</string>
    <string name="smart_library_version_1_0">Smart Library version 1.0</string>
    <string name="copy_right_smart_library_system">Copy right smart library system</string>
    <string name="md_member_2">- Yossy Syahida</string>
    <string name="cc_member_2">- Orel Revo Sakchi Usdelivian</string>
    <string name="ml_member_2">- Ergina Kamilia Putri</string>

</resources>