<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/layout_header_profile"
        layout="@layout/layout_header_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-95dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_main"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/fullname_title"
            android:textSize="12sp"
            android:textStyle="bold" />

        <include
            android:id="@+id/layout_fullname_edit_profile"
            layout="@layout/layout_edit_profile_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/username_title"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <include
            android:id="@+id/layout_username_edit_profile"
            layout="@layout/layout_edit_profile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/address_title"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <include
            android:id="@+id/layout_address_edit_profile"
            layout="@layout/layout_edit_profile_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/email_title"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <include
            android:id="@+id/layout_email_edit_profile"
            layout="@layout/layout_edit_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>